2002-11-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/interp.test: interp-14.4
	* generic/tclInterp.c (TclPreventAliasLoop): prevent seg fault
	when creating an alias command over the interp name. [Bug #641195]

2002-11-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclUtil.c (SetEndOffsetFromAny): handle integer offset
	after the "end-" prefix.

	* generic/get.test:
	* generic/string.test:
	* generic/tclObj.c (SetIntFromAny, SetWideIntFromAny): 
	* generic/tclGet.c (TclGetLong, Tcl_GetInt): simplify sign
	handling before calling strtoul(l). [Bug #634856]

2002-11-18  David Gravereaux  <davygrvy@pobox.com>

	* win/tclWinThrd.c (Tcl_CreateThread/TclpThreadExit): Fixed
	improper compiler macros that missed the VC++ compiler.  This
	resulted in VC++ builds using CreateThread()/ExitThread() in place
	of the proper _beginthreadex()/_endthreadex().  This was a large
	error and am surprised I missed seeing it earlier.

2002-11-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/regexpComp.test: added tests 22.*
	* generic/tclCompCmds.c (TclCompileRegexpCmd): add left and right
	anchoring (^ and $) recognition and check starting or ending .* to
	extend the number of REs that can be compiled to string match or
	string equal.

2002-11-13  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclCmdMZ.c:
	* tests/trace.test: applied patch from Hemang Levana to fix
	[Bug #615043] in execution traces with 'return -code error'.
	
	* generic/tclTestObj.c:
	* tests/stringObj.test: added 'knownBug' test for [Bug 635200]
	* generic/tclStringObj.c: corrected typos in comments

	* generic/tclFileName.c:
	* tests/fileName.test: applied patch for bug reported against
	tclvfs concerning handling of Windows serial ports like 'com1',
	'lpt3' by the virtual filesystem code.

	* doc/RegExp.3: clarification of the 'extendMatch' return
	values.

2002-11-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclUtil.c (Tcl_Backslash): use TclUtfToUniChar.